Trial and Test MetricStore components
